--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
-org.gradle.jvmargs=-Xmx4G
+org.gradle.jvmargs=-Xmx1G
 
-minecraft_version=1.16.4
-yarn_mappings=1.16.4+build.6:v2
-loader_version=0.10.6+build.214
+minecraft_version=1.16.5
+yarn_mappings=1.16.5+build.6:v2
+loader_version=0.11.3
 
 #Fabric api
-fabric_version=0.25.1+build.416-1.16
+fabric_version=0.32.5+1.16
 
 # Mod Properties
-mod_version=1.5.2-1.16
+mod_version=1.16.5
 maven_group=net.kyrptonaught
 archives_base_name=cmdkeybind
 
